resolved a css problem where the response images was overflowing the body/html width

--- a/src/styles/SearchResults.css
+++ b/src/styles/SearchResults.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 10px;
+  width: 95%;
 }
 
 .result-paraghraph {
@@ -18,6 +18,7 @@
   border: 1px solid white;
   min-width: 250px;
   min-height: 250px;
+  max-width: 100%;
   width: fit-content;
   height: fit-content;
 }
