--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,18 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("../images/space.jpeg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-@media screen and (min-width: 450px) and (max-width: 1000px) {
-  html {
-    min-width: max-content;
-  }
 }
